feat: add click on keyboard

--- a/style.css
+++ b/style.css
@@ -5,16 +5,32 @@
 
 .keyboard {
     display: flex;
-    
+    width: 900px;
+    flex-wrap: wrap;
+
 }
 
 .key {
-    display: inline-block;
+    margin: 4px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background: aqua;
     border: 1px solid black;
+    cursor: pointer;
+}
+.key:hover {
+    background: blueviolet;
+}
+.key:active {
+    background: blue;
+}
+.dblKey {
+    width: 110px;
+}
+.space {
+    width: 410px;
 }
