feat: add change language

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
     border: 1px solid black;
     cursor: pointer;
 }
+.active {
+    background: blue;
+}
 .key:hover {
     background: blueviolet;
 }
