--- a/style.css
+++ b/style.css
@@ -1,13 +1,36 @@
+@keyframes keyClick {
+    from {
+        background: aqua;
+        border-radius: 5px;
+    }
+  
+    to {
+        background:  blue;
+        border-radius: 25px;
+    }
+}
+body {
+    background: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
 .field {
-    width: 1000px;
-    height: 500px;
+    width: 900px;
+    height: 300px;
+    border: 3px solid gray;
+    border-radius: 30px;
+    padding: 10px;
+    font-family: Arial;
+    font-size: 24px;
 }
 
 .keyboard {
     display: flex;
-    width: 900px;
+    width: 930px;
     flex-wrap: wrap;
-
 }
 
 .key {
@@ -19,21 +42,28 @@
     width: 50px;
     height: 50px;
     background: aqua;
-    border: 1px solid black;
+    border: 2px solid gray;
     cursor: pointer;
+    border-radius: 5px;
+    font-family: Arial;
+    font-size: 24px;
 }
 .active {
+    animation-duration: 0.5s;
+    animation-name: keyClick;
     background: blue;
 }
 .key:hover {
-    background: blueviolet;
+    background: rgb(14, 226, 226);
 }
 .key:active {
+    animation-duration: 0.3s;
+    animation-name: keyClick;
     background: blue;
 }
 .dblKey {
-    width: 110px;
+    width: 111px;
 }
 .space {
-    width: 410px;
+    width: 420px;
 }
